cabal-version:      2.4
name:               ghc-meta
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Parse strings to Template Haskell using GHC's own parser.

-- A longer description of the package.
-- description:

bug-reports: https://github.com/noughtmare/ghc-meta/issues

license:            GPL-3.0-only
author:             Jaro Reinders
maintainer:         jaro.reinders@gmail.com

copyright: 2021 Jaro Reinders
category: Language, Template Haskell
extra-source-files: CHANGELOG.md

library
  exposed-modules:  GHC.Meta

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base              ^>=4.14.1.0
    , bytestring
    , ghc-lib-parser    >=8.10.4   && <8.10.5
    , template-haskell

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall

executable example
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
    , base      ^>=4.14.1.0
    , ghc-meta

  default-language: Haskell2010
  ghc-options:      -Wall
